<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_note"
            android:icon="@drawable/ic_add"
            android:title="@string/create_new_note" />
        <item
            android:id="@+id/add_beacon"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/add_new_beacon" />
        <item
            android:id="@+id/all_beacons"
            android:icon="@drawable/ic_location_searching_black_24dp"
            android:title="@string/view_all_beacons" />
    </group>

    <item android:title="@string/about_app">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/help" />
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
