<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content">



    <RadioGroup
        android:id="@+id/colorRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/color1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fcc875"
            android:text="@string/color_1" />

        <RadioButton
            android:id="@+id/color2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#baa896"
            android:text="@string/color_2" />

        <RadioButton
            android:id="@+id/color3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6ccb5"
            android:text="@string/color_3" />

        <RadioButton
            android:id="@+id/color4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e38b75"
            android:text="@string/color_4" />

        <RadioButton
            android:id="@+id/color5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eae2d6"
            android:text="@string/color_5" />

        <RadioButton
            android:id="@+id/color6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d5c3aa"
            android:text="@string/color_6" />

        <RadioButton
            android:id="@+id/color7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ebb582"
            android:text="@string/color_7" />

        <RadioButton
            android:id="@+id/color8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d6c6b9"
            android:text="@string/color_8" />


    </RadioGroup>


    <Button
        android:id="@+id/OkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorRadioGroup" />


    <Button
        android:id="@+id/CancelButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OkButton" />


</android.support.constraint.ConstraintLayout>