<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:id="@+id/beacon_scanning"
        android:defaultValue="true"
        android:key="beacon_scanning"
        android:title="@string/enable_beacon_scanning" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications"
        android:title="@string/pref_title_new_message_notifications" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_silent"
        android:dependency="notifications"
        android:title="Silent" />


    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_vibrate" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="user_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />



</PreferenceScreen>
